# FALSA-model-problem

./: .gitignore  .tmuxp.yaml  CMakeLists.txt  License.txt  README-devcontainer.md  README.md  closeall.sh  launch.sh  start-container.sh
.devcontainer/: Dockerfile  devcontainer.json  px4_poll_fix.patch
assurancebrkr/: CMakeLists.txt  README.md  assurancebrkrapp.cc  server.cc  server.h  start_assurancebrkr.sh
configs/: ports.cfg
doc/: build-details.md  mp_architecture.puml
gcs/: CMakeLists.txt  README.md  client.cc  client.h  gcsapp.cc  gcsapp.log.0  start_gcs.sh
guidance/: CMakeLists.txt  README.md  client.cc  client.h  governor.cc  governor.h  guidance.cc  guidance.h  guidanceapp.cc  guidanceapp.log.0  mavsdkutils.cc  mavsdkutils.h  new_pe.txt  server.cc  server.h  start_guidance.sh  vehicleState.h
interfaces/: CommonTypes.h  IAssurance.h  IGuidance.h  IMissionManager.h  IPayload.h  IStatus.h
ltlmon-rt/: CMakeLists.txt  README.md  ltlmonrt.cpp  ltlmonrt.hpp  main.cpp
ltlmon-rt/tests/: prop1.mon
missionmanager/: CMakeLists.txt  README.md  client_assurance.cc  client_assurance.h  client_guidance.cc  client_guidance.h  client_payload.cc  client_payload.h  missionmanager.cc  missionmanager.h  missionmanager.log.0  missionmanagerapp.cc  server_gcs.cc  server_gcs.h  server_guidance.cc  server_guidance.h  start_missionmanager.sh  state_control.cc  state_control.h  timer_util.cc  timer_util.h
payload/: CMakeLists.txt  README.md  payload.cc  payload.h  payloadapp.cc  server.cc  server.h  start_payload.sh
protos/: IAssurance.proto  IGuidance.proto  IMissionManager.proto  IPayload.proto  LatLonCoord.proto  Status.proto  Time.proto  Types.proto  Waypoint.proto
protos/generated_files/: Guidance.cpp  IGuidance.h  IMissionManager.h  IPayload.h
tools/: format_all.sh
utils/: portutils.h
